--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-spinners": "^0.15.0",
-    "react-toastify": "^11.0.2"
+    "react-toastify": "^11.0.2",
+    "rollup": "^4.29.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
